PyMaker/datas/object2/RawHTML/i16401/Python_DOC_referPages.beautifulsoup-error-invalid-character-in-identifier.txt
<div class="post-text" itemprop="text">
<p>I am using bs4 (beautifulsoup) in python 3.2, and this is my code:</p>
<pre><code>from urllib import urlopen
from bs4 import bs4
import re

webpage = urlopen(‘http://www.azlyrics.com/lyrics/kanyewest/workoutplan.html’).read()
</code></pre>
<p>It gives:</p>
<pre><code>    webpage = urlopen(‘http://www.azlyrics.com/lyrics/kanyewest/workoutplan.html’).read()
                            ^
SyntaxError: invalid character in identifier
</code></pre>
<p>How can I fix this?</p>
</div>
<div class="post-text" itemprop="text">
<p>You are not using ASCII quote characters; <code>‘</code> is not a legal quote in Python syntax.</p>
<p>Use a <em>text editor</em> to edit your Python source code, not one that replaces plain ASCII quotes with fancy quotes.</p>
<p>Use <code>'</code> or <code>"</code>:</p>
<pre><code>webpage = urlopen('http://www.azlyrics.com/lyrics/kanyewest/workoutplan.html').read()
webpage = urlopen("http://www.azlyrics.com/lyrics/kanyewest/workoutplan.html").read()
</code></pre>
<p>See <a href="https://docs.python.org/3/reference/lexical_analysis.html#string-and-bytes-literals" rel="nofollow"><em>String and Bytes literals</em></a> for the exhaustive list of options.</p>
</div>
<span class="comment-copy">Indeed, Python 3.2 places the marker a little further along, I used Python 3.4 which indicates earlier that there is something fishy. The cause is the same, however.</span>
<span class="comment-copy">Thank you, I actually copy pasted this code from somewhere else, and it used different quotes.</span>
<span class="comment-copy">@TheEyesHaveIt: then that blog used a fancy-shmancy word processor and that mucked up their code samples. :-)</span>
